@@ -138,17 +138,17 @@ public class JSONParser {
                     switch (token.type) {
                     case Yytoken.TYPE_VALUE:
                         status = S_IN_FINISHED_VALUE;
-                        statusStack.addFirst(new Integer(status));
+                        statusStack.addFirst(Integer.valueOf(status));
                         valueStack.addFirst(token.value);
                         break;
                     case Yytoken.TYPE_LEFT_BRACE:
                         status = S_IN_OBJECT;
-                        statusStack.addFirst(new Integer(status));
+                        statusStack.addFirst(Integer.valueOf(status));
                         valueStack.addFirst(createObjectContainer(containerFactory));
                         break;
                     case Yytoken.TYPE_LEFT_SQUARE:
                         status = S_IN_ARRAY;
-                        statusStack.addFirst(new Integer(status));
+                        statusStack.addFirst(Integer.valueOf(status));
                         valueStack.addFirst(createArrayContainer(containerFactory));
                         break;
                     default:
@@ -157,10 +157,11 @@ public class JSONParser {
                     break;
 
                 case S_IN_FINISHED_VALUE:
-                    if (token.type == Yytoken.TYPE_EOF)
+                    if (token.type == Yytoken.TYPE_EOF) {
                         return valueStack.removeFirst();
-                    else
+                    } else {
                         throw new JSONParseException(getPosition(), JSONParseException.ERROR_UNEXPECTED_TOKEN, token);
+                    }
 
                 case S_IN_OBJECT:
                     switch (token.type) {
@@ -171,7 +172,7 @@ public class JSONParser {
                             String key = (String) token.value;
                             valueStack.addFirst(key);
                             status = S_PASSED_PAIR_KEY;
-                            statusStack.addFirst(new Integer(status));
+                            statusStack.addFirst(Integer.valueOf(status));
                         } else {
                             status = S_IN_ERROR;
                         }
@@ -209,7 +210,7 @@ public class JSONParser {
                         List<Object> newArray = createArrayContainer(containerFactory);
                         parent.put(key, newArray);
                         status = S_IN_ARRAY;
-                        statusStack.addFirst(new Integer(status));
+                        statusStack.addFirst(Integer.valueOf(status));
                         valueStack.addFirst(newArray);
                         break;
                     case Yytoken.TYPE_LEFT_BRACE:
@@ -219,7 +220,7 @@ public class JSONParser {
                         Map<String, Object> newObject = createObjectContainer(containerFactory);
                         parent.put(key, newObject);
                         status = S_IN_OBJECT;
-                        statusStack.addFirst(new Integer(status));
+                        statusStack.addFirst(Integer.valueOf(status));
                         valueStack.addFirst(newObject);
                         break;
                     default:
@@ -249,7 +250,7 @@ public class JSONParser {
                         Map<String, Object> newObject = createObjectContainer(containerFactory);
                         val.add(newObject);
                         status = S_IN_OBJECT;
-                        statusStack.addFirst(new Integer(status));
+                        statusStack.addFirst(Integer.valueOf(status));
                         valueStack.addFirst(newObject);
                         break;
                     case Yytoken.TYPE_LEFT_SQUARE:
@@ -257,7 +258,7 @@ public class JSONParser {
                         List<Object> newArray = createArrayContainer(containerFactory);
                         val.add(newArray);
                         status = S_IN_ARRAY;
-                        statusStack.addFirst(new Integer(status));
+                        statusStack.addFirst(Integer.valueOf(status));
                         valueStack.addFirst(newArray);
                         break;
                     default:
@@ -280,8 +281,9 @@ public class JSONParser {
 
     private void nextToken() throws JSONParseException, IOException {
         token = lexer.yylex();
-        if (token == null)
+        if (token == null) {
             token = new Yytoken(Yytoken.TYPE_EOF, null);
+        }
     }
 
     private Map<String, Object> createObjectContainer(ContainerFactory containerFactory) {
@@ -348,7 +350,8 @@ public class JSONParser {
      * @throws IOException
      * @throws JSONParseException
      */
-    public void parse(Reader in, ContentHandler contentHandler, boolean isResume) throws IOException, JSONParseException {
+    public void parse(Reader in, ContentHandler contentHandler, boolean isResume) throws IOException,
+            JSONParseException {
         if (!isResume) {
             reset(in);
             handlerStatusStack = new LinkedList<Integer>();
@@ -371,21 +374,24 @@ public class JSONParser {
                     switch (token.type) {
                     case Yytoken.TYPE_VALUE:
                         status = S_IN_FINISHED_VALUE;
-                        statusStack.addFirst(new Integer(status));
-                        if (!contentHandler.primitive(token.value))
+                        statusStack.addFirst(Integer.valueOf(status));
+                        if (!contentHandler.primitive(token.value)) {
                             return;
+                        }
                         break;
                     case Yytoken.TYPE_LEFT_BRACE:
                         status = S_IN_OBJECT;
-                        statusStack.addFirst(new Integer(status));
-                        if (!contentHandler.startObject())
+                        statusStack.addFirst(Integer.valueOf(status));
+                        if (!contentHandler.startObject()) {
                             return;
+                        }
                         break;
                     case Yytoken.TYPE_LEFT_SQUARE:
                         status = S_IN_ARRAY;
-                        statusStack.addFirst(new Integer(status));
-                        if (!contentHandler.startArray())
+                        statusStack.addFirst(Integer.valueOf(status));
+                        if (!contentHandler.startArray()) {
                             return;
+                        }
                         break;
                     default:
                         status = S_IN_ERROR;
@@ -412,9 +418,10 @@ public class JSONParser {
                         if (token.value instanceof String) {
                             String key = (String) token.value;
                             status = S_PASSED_PAIR_KEY;
-                            statusStack.addFirst(new Integer(status));
-                            if (!contentHandler.startObjectEntry(key))
+                            statusStack.addFirst(Integer.valueOf(status));
+                            if (!contentHandler.startObjectEntry(key)) {
                                 return;
+                            }
                         } else {
                             status = S_IN_ERROR;
                         }
@@ -426,8 +433,9 @@ public class JSONParser {
                         } else {
                             status = S_IN_FINISHED_VALUE;
                         }
-                        if (!contentHandler.endObject())
+                        if (!contentHandler.endObject()) {
                             return;
+                        }
                         break;
                     default:
                         status = S_IN_ERROR;
@@ -443,26 +451,30 @@ public class JSONParser {
                     case Yytoken.TYPE_VALUE:
                         statusStack.removeFirst();
                         status = peekStatus(statusStack);
-                        if (!contentHandler.primitive(token.value))
+                        if (!contentHandler.primitive(token.value)) {
                             return;
-                        if (!contentHandler.endObjectEntry())
+                        }
+                        if (!contentHandler.endObjectEntry()) {
                             return;
+                        }
                         break;
                     case Yytoken.TYPE_LEFT_SQUARE:
                         statusStack.removeFirst();
-                        statusStack.addFirst(new Integer(S_IN_PAIR_VALUE));
+                        statusStack.addFirst(Integer.valueOf(S_IN_PAIR_VALUE));
                         status = S_IN_ARRAY;
-                        statusStack.addFirst(new Integer(status));
-                        if (!contentHandler.startArray())
+                        statusStack.addFirst(Integer.valueOf(status));
+                        if (!contentHandler.startArray()) {
                             return;
+                        }
                         break;
                     case Yytoken.TYPE_LEFT_BRACE:
                         statusStack.removeFirst();
-                        statusStack.addFirst(new Integer(S_IN_PAIR_VALUE));
+                        statusStack.addFirst(Integer.valueOf(S_IN_PAIR_VALUE));
                         status = S_IN_OBJECT;
-                        statusStack.addFirst(new Integer(status));
-                        if (!contentHandler.startObject())
+                        statusStack.addFirst(Integer.valueOf(status));
+                        if (!contentHandler.startObject()) {
                             return;
+                        }
                         break;
                     default:
                         status = S_IN_ERROR;
@@ -477,8 +489,9 @@ public class JSONParser {
                      */
                     statusStack.removeFirst();
                     status = peekStatus(statusStack);
-                    if (!contentHandler.endObjectEntry())
+                    if (!contentHandler.endObjectEntry()) {
                         return;
+                    }
                     break;
 
                 case S_IN_ARRAY:
@@ -487,8 +500,9 @@ public class JSONParser {
                     case Yytoken.TYPE_COMMA:
                         break;
                     case Yytoken.TYPE_VALUE:
-                        if (!contentHandler.primitive(token.value))
+                        if (!contentHandler.primitive(token.value)) {
                             return;
+                        }
                         break;
                     case Yytoken.TYPE_RIGHT_SQUARE:
                         if (statusStack.size() > 1) {
@@ -497,20 +511,23 @@ public class JSONParser {
                         } else {
                             status = S_IN_FINISHED_VALUE;
                         }
-                        if (!contentHandler.endArray())
+                        if (!contentHandler.endArray()) {
                             return;
+                        }
                         break;
                     case Yytoken.TYPE_LEFT_BRACE:
                         status = S_IN_OBJECT;
-                        statusStack.addFirst(new Integer(status));
-                        if (!contentHandler.startObject())
+                        statusStack.addFirst(Integer.valueOf(status));
+                        if (!contentHandler.startObject()) {
                             return;
+                        }
                         break;
                     case Yytoken.TYPE_LEFT_SQUARE:
                         status = S_IN_ARRAY;
-                        statusStack.addFirst(new Integer(status));
-                        if (!contentHandler.startArray())
+                        statusStack.addFirst(Integer.valueOf(status));
+                        if (!contentHandler.startArray()) {
                             return;
+                        }
                         break;
                     default:
                         status = S_IN_ERROR;
